--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome= Tanks for the memories !! 
+welcome= Tanks for the mammaries !! 
 required=is required
 notFound=has not been found
 duplicate=is already in use
